Fixing z-index

--- a/espace.css
+++ b/espace.css
@@ -24,4 +24,5 @@
 
 .espace {
 	position: absolute;
+	z-index: 0;
 }
