--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@
 	position: absolute;
 	left: 20;
 	top: 20;
+	z-index: 2;
 }
 
 #home_to_top {
