--- a/nav.css
+++ b/nav.css
@@ -3,6 +3,7 @@
 
 #nav {
 	position: absolute;
+	z-index: 1;
 }
 
 .nav {
